[CAMEL-16963]tests in camel-ignite failed with JDK17